# Helios-MBMS-DisplayBoard

DisplayBoard/: CMakeLists.txt  platformio.ini
DisplayBoard/include/: lv_conf.h  main.h  spi_helper.h  tft_helper.h  ui.h  ui_helpers.h
DisplayBoard/lib/TFT_eSPI/: User_Setup.h
DisplayBoard/src/: RandomNerdTutorialExample.cpp  main.cpp  spi_helper.cpp  tft_helper.cpp  ui.c  ui_Contactor_Screen.c  ui_HomeScreen.c  ui_MBMSStatusScreen.c  ui_PowerSelectionStatusScreen.c  ui_TripScreen.c
Firmware/: .gitignore  README.md  sdkconfig
Firmware/include/: lv_conf.h  spi_helper.h  tft_helper.h  ui.h  ui_events.h
Firmware/main/: CMakeLists.txt  main.cpp  spi_helper.cpp  tft_helper.cpp  ui.c  ui_Contactor_Screen.c  ui_PowerSelectionStatusScreen.c  ui_TripScreen.c  ui_helpers.c  ui_img_heart_app_icon_red_outline_black_background_png.c
LVGL Outputs/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_BatteryInfoScreen.c  ui_MBMSStatusScreen.c  ui_Screen1.c  ui_TripScreen.c  ui_comp_hook.c
