idf_component_register(
    SRCS 
        "main.cpp"
        "spi_helper.cpp"
        "tft_helper.cpp"
        "ui.c"
        "ui_BatteryInfoScreen.c"
        "ui_Contactor_Screen.c"
        "ui_helpers.c"
        "ui_HomeScreen.c"
        "ui_img_heart_app_icon_red_outline_black_background_png.c"
        "ui_MBMSStatusScreen.c"
        # "ui_PowerSelectionStatusScreen.c"
        "ui_TripScreen.c"
    INCLUDE_DIRS "../include"
)
